# POO-GestionareBiblioteca-CimpanStefan-3122A

./: .gitignore  CMakeLists.txt  README.md  biblioteca.cpp  biblioteca.h  carte.cpp  carte.h  main.cpp
include/: AppState.h  BiblioAI.h  Biblioteca.h  Carte.h  Theme.h
include/screens/: AdminScreen.h  BiblioScreen.h  GuestScreen.h  LoginScreen.h  RegisterScreen.h  StartScreen.h  UserScreen.h
src/: BiblioAI.cpp  Biblioteca.cpp  Carte.cpp  Theme.cpp  main.cpp
src/screens/: AdminScreen.cpp  BiblioScreen.cpp  GuestScreen.cpp  LoginScreen.cpp  RegisterScreen.cpp  StartScreen.cpp  UserScreen.cpp
